# excalidraw-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/excalidraw_mcp/: server.py
src/excalidraw_mcp/elements/: arrows.py  groups.py  lines.py  shapes.py  style.py  text.py
src/excalidraw_mcp/layout/: grid.py  sugiyama.py
src/excalidraw_mcp/tools/: architecture.py  bar_chart.py  class_diagram.py  decision_tree.py  er_diagram.py  export.py  flowchart.py  help.py  kanban.py  line_chart.py  mermaid.py  mindmap.py  modify.py  network.py  org_chart.py  pie_chart.py  quadrant.py  radar.py  read.py  sequence.py  state_diagram.py  swot.py  table.py  timeline.py  unified.py  user_journey.py  wireframe.py
tests/: test_adaptive_gap.py  test_architecture.py  test_arrow_routing.py  test_bar_chart.py  test_class_diagram.py  test_decision_tree.py  test_elbow_arrows.py  test_engine_functions.py  test_er_diagram.py  test_flowchart.py  test_font_family.py  test_integration.py  test_kanban.py  test_line_chart.py  test_line_chart_enhanced.py  test_lines.py  test_list_tools.py  test_mermaid.py  test_mermaid_advanced.py  test_mermaid_class.py  test_mermaid_pie.py  test_mermaid_sequence.py  test_mermaid_state.py  test_mindmap.py  test_network.py  test_org_chart.py  test_pie_chart.py  test_quadrant.py  test_radar.py  test_sequence.py  test_state_diagram.py  test_style.py  test_sugiyama.py  test_swot.py  test_table.py  test_text_unicode.py  test_text_width.py  test_theme.py  test_timeline.py  test_title_centering.py  (+3 more)
(+3 files in other folders)
