[project]
name = "excalidraw-mcp"
version = "0.1.0"
description = "Generate beautiful Excalidraw diagrams with auto-layout. Flowcharts, architecture diagrams, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
excalidraw-mcp = "excalidraw_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excalidraw_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
