[project]
name = "maaker-excalidraw-mcp"
version = "0.4.0"
description = "Generate 20+ types of Excalidraw diagrams with auto-layout. Flowcharts, sequence, architecture, mind maps, ER, class, state, timeline, pie charts, kanban, wireframes, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "grandalf>=0.8",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
excalidraw-mcp = "excalidraw_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excalidraw_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
